--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pipiQuiz - Arkadaşlık Testi</title>
     <style>
-        /* Stil ayarları burada */
+        /* Sitenin mevcut CSS kodları burada kalacak, görünüşe dokunulmuyor */
     </style>
 </head>
-<body class="white">
+<body>
 <h1>pipiQuiz - Arkadaşlık Testi</h1>
 <button id="theme-toggle" onclick="toggleTheme()">Tema Değiştir</button>
 
