--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #4e54c8, #8f94fb);
             color: #333;
             text-align: center;
             margin: 0;
@@ -19,7 +18,6 @@
             color: #f4f4f9;
         }
         body.white {
-            background: linear-gradient(135deg, #f5f5f5, #ffffff);
             color: #333;
         }
         h1 {
@@ -151,7 +149,7 @@
 <div id="leaderboard" style="display: none;">
     <h2>En İyi Skorlar</h2>
     <ul id="leaderboard-list">
-        <!-- En iyi skorlar buraya eklenecek -->
+        
     </ul>
 </div>
 
@@ -260,7 +258,23 @@
         }
     }
 
+    function randomGradient() {
+        const colors = [
+            ["#ff7e5f", "#feb47b"],
+            ["#00c6ff", "#0072ff"],
+            ["#f7971e", "#ffd200"],
+            ["#8e2de2", "#4a00e0"],
+            ["#f54ea2", "#ff7676"],
+            ["#007991", "#78ffd6"],
+            ["#ff9966", "#ff5e62"],
+            ["#3a1c71", "#d76d77", "#ffaf7b"]
+        ];
+        const randomColors = colors[Math.floor(Math.random() * colors.length)];
+        document.body.style.background = `linear-gradient(135deg, ${randomColors.join(", ")})`;
+    }
+
     document.addEventListener('DOMContentLoaded', () => {
+        randomGradient();
         renderQuestions();
         renderGuessQuestions();
     });
