--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
             width: 30px;
             height: 30px;
         }
+        /* Karanlık mod için input arka plan rengi */
+        body.dark input[type="text"] {
+            background-color: #555;
+            color: #f4f4f9;
+            border: 1px solid #777;
+        }
     </style>
 </head>
 <body class="white">
@@ -202,83 +208,46 @@
         document.getElementById('share-link').style.display = 'block';
     }
 
-    function renderGuessQuestions() {
-        const params = new URLSearchParams(window.location.search);
-        const encodedAnswers = params.get('answers');
-        if (!encodedAnswers) return;
-        const correctAnswers = atob(encodedAnswers).split(",").map(Number);
-        const questionContainer = document.getElementById('guess-questions');
-        questions.forEach((q, index) => {
-            const qDiv = document.createElement('div');
-            qDiv.innerHTML = `<p>${q.question}</p>`;
-            q.options.forEach((opt, i) => {
-                const optBtn = document.createElement('button');
-                optBtn.innerText = opt;
-                optBtn.className = 'option-btn';
-                optBtn.onclick = () => {
-                    answers[index] = i;
-                    disableOptions(qDiv);
-                };
-                qDiv.appendChild(optBtn);
-            });
-            questionContainer.appendChild(qDiv);
-        });
-        document.getElementById('guess-section').style.display = 'block';
-    }
-
     function revealResults() {
-        const correctAnswers = atob(new URLSearchParams(window.location.search).get('answers')).split(",").map(Number);
+        const guessName = document.getElementById('guess-name').value;
+        const guessedAnswers = decodeAnswers(getQueryVariable('answers'));
         let score = 0;
-        answers.forEach((ans, index) => {
-            if (ans === correctAnswers[index]) {
-                score++;
-            }
+        guessedAnswers.forEach((ans, index) => {
+            if (ans === answers[index]) score++;
         });
-        document.getElementById('score').innerText = `Skorunuz: ${score} / ${questions.length}`;
-        addToLeaderboard(score);
+        document.getElementById('score').innerText = `${guessName}, doğru cevap sayınız: ${score}`;
     }
 
-    function addToLeaderboard(score) {
-        const leaderboard = document.getElementById('leaderboard-list');
-        const scoreItem = document.createElement('li');
-        scoreItem.innerText = `Skor: ${score} - ${document.getElementById('guess-name').value}`;
-        leaderboard.appendChild(scoreItem);
-        document.getElementById('leaderboard').style.display = 'block';
+    function decodeAnswers(encodedStr) {
+        return atob(encodedStr).split(',').map(Number);
+    }
+
+    function getQueryVariable(variable) {
+        const query = window.location.search.substring(1);
+        const vars = query.split("&");
+        for (let i = 0; i < vars.length; i++) {
+            const pair = vars[i].split("=");
+            if (pair[0] === variable) return pair[1];
+        }
+        return false;
     }
 
     function toggleTheme() {
         const body = document.body;
-        const themeIcon = document.getElementById('theme-icon');
-        if (body.classList.contains('white')) {
-            body.classList.replace('white', 'dark');
-            themeIcon.src = 'images/sun.png';
-        } else {
-            body.classList.replace('dark', 'white');
-            themeIcon.src = 'images/moond.png';
-        }
+        const themeToggleIcon = document.getElementById('theme-icon');
+        body.classList.toggle('dark');
+        body.classList.toggle('white');
+        themeToggleIcon.src = body.classList.contains('dark') ? 'images/sun.png' : 'images/moond.png';
     }
 
-    function randomGradient() {
-        const colors = [
-            ["#ff7e5f", "#feb47b"],
-            ["#00c6ff", "#0072ff"],
-            ["#f7971e", "#ffd200"],
-            ["#8e2de2", "#4a00e0"],
-            ["#f54ea2", "#ff7676"],
-            ["#007991", "#78ffd6"],
-            ["#ff9966", "#ff5e62"],
-            ["#3a1c71", "#d76d77", "#ffaf7b"]
-        ];
-        const randomColors = colors[Math.floor(Math.random() * colors.length)];
-        document.body.style.background = `linear-gradient(135deg, ${randomColors.join(", ")})`;
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-        randomGradient();
+    window.onload = function() {
         renderQuestions();
-        renderGuessQuestions();
-    });
+        const name = getQueryVariable('name');
+        if (name) {
+            document.getElementById('guess-name').value = decodeURIComponent(name);
+            document.getElementById('guess-section').style.display = 'block';
+        }
+    };
 </script>
-
 </body>
 </html>
